--- a/styles.css
+++ b/styles.css
@@ -3,3 +3,34 @@
     font-size: 16px;
     cursor: pointer;
 }
+.modal{
+	display:none;
+	position: fixed;
+	width: 100%;
+	height: 100%;
+	background-color: rgba(0,0,0,0.4);
+}
+.modal-content{
+	background-color: #fefefe;
+	border: 1px solid #888;
+	width: 80%;
+	margin: 5% auto;
+	padding: 20px;
+}
+.modal-header{
+	background-color: #5cb85c;
+	color: white;
+}
+.close-modal {
+	float: right;
+	cursor: pointer;
+	font-size: 20px;
+	border: none;
+	color: gray;
+}
+.close-modal:hover,
+.close-modal:focus {
+	color: #000;
+	text-decoration: none;
+	cursor: pointer;
+}
